new about_us.html

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             <p>Email:- <a href="mailto:kumarutkarsh3012@gmail.com">kumarutkarsh3012@gmail.com</a></p>
             <p>Contact no.:- <a href="tel:+919898989898">963xxxxxxx</a></p>
             
-            <p><a target="_blank" href="C:\Users\7\web2\web development by anuj bhaiya\resume\about_us.html">About us</a></p>
+            <p><a target="_blank" href="about_us.html">About us</a></p>
             
             <nav>
                 <p><a href="#">Go on top</a></p>
